tweak jwt token
